@@ -31,17 +31,21 @@ Fixes:
 	[ ] ALife do nothing while in cover
 	[ ] You can't wear an item if it is stored AND a storage item itself
 	[ ] Item scoring should replace `combat.get_best_weapon`. Merge its contents.
-	[ ] Items need dereferencing inside ALife memory on delete
+	[/] Items need dereferencing inside ALife memory on delete
 		Remembered items should still be able to reference deleted items in some way
 		This kind of behavior lends itself to the sort of behavior we're desiring,
 		i.e., a feeling of uncertainty, that the player and ALife can be led to non-
 		existent items/etc.
-	[ ] Telling other ALife about items/chunks can lead to interesting behaviors
+	[/] Telling other ALife about items/chunks can lead to interesting behaviors
 		e.g.: "I heard about <x> from <y>, maybe I should check it out."
 		e.g.: An item is wanted, but not right away
 	[ ] `5` is hardcoded as the lowest preferred ammo count for usable weapons
 	[ ] Keep chunk_map from mapgen?
 	[ ] Integrate color lerping into menu item creation
+	[ ] Current dijkstra map crash could be due to the distances between points being too far.
+		Maybe use A* until we're at a suitable distance?
+	[ ] Show what non-tiles are in look mode (using the mouse or free look only)
+		Grass, trees, etc
 
 Cycles:
 	[ ] ALife searching for group leader when not found at `last_pos`
@@ -51,6 +55,9 @@ Cycles:
 	&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 	
 	WEAPON DISTANCES IN ALL LOGIC FUNCTIONS
+
+Dead Cycles
+	[ ] Engage -> Spend ammo -> idle
 
 Future:
 	[x] Re-announce group whenever (alife_group.py)
@@ -83,11 +90,6 @@ Future:
 It's very early in the morning, a perfect time for raids, as the enemy is usually taking shelter from the rabid wildlife that come out at night.
 My squademate hangs back, slightly outside of town. If I can't do the raid myself, he'll be there for backup.
 I take a shot at the first person I see, destroying the target's <limb>
-
-****
-Dead Cycles
-****
-	[ ] Engage -> Spend ammo -> idle
 
 Dialog
 	[ ] What is our relationship like with <group>?
